--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
 const ENV = process.env.NODE_ENV || 'development';
 
 module.exports = {
-  config: 'config/database.js',
-  'migrations-path': 'database/migrate',
-  'models-path': 'database/models',
-  'seeders-path': 'database/seeds'
+  config: 'src/config/database.js',
+  'migrations-path': 'src/database/migrate',
+  'models-path': 'src/database/models',
+  'seeders-path': 'src/database/seeds'
 };
